demofiles/Parser.java
/**
 * Implementation of a recursive descent parser for the Java programming
 * language.
 *
 * @author Michael Smith and Nathan Jean
 */

package parser;

import java.util.ArrayDeque;

import interfaces.ParserInterface;
import types.InvalidInputException;
import types.Lexeme;
import types.Token;

public class Parser implements ParserInterface{

	LexicalAnalyzer lex;
	Lexeme nextLexeme;
	int indentationLevel; // level of indentation for the output
	ArrayDeque<String> outputQueue; // queue containing all of the output strings

	/**
	* Constructor creates the lexical analyzer and initializes nextLexeme, given an input string
	*
	* @param inputString
	 * @throws InvalidInputException
	*/
	public Parser(String inputString) {
		lex = new LexicalAnalyzer(inputString);
		nextLexeme = lex.nextLexeme();
		indentationLevel = 0;
		outputQueue = new ArrayDeque<String>();
	} // end constructor

	/**
	* Checks if the current lexeme's associated token is equal to the given token,
	* prints out the current lexeme, and moves to the next lexeme in the input string
	*
	* @param token Expected token
	* @throws InvalidInputException
	*/
	private void parseLexeme(Token token) throws InvalidInputException {
		
		if (nextLexeme.getToken() == token) {
			output(nextLexeme.toString(), 0);
			nextLexeme = lex.nextLexeme();
		} else {
			error();
		} // end if/else
		
	} // end processLexeme()

	/**
	 * Modified print statement to maintain proper indentation, and redirect output
	 * to an output queue
	 *
	 * @param toPrint String to print
	 * @param direction Positive integer to decrease indentation, negative to decrease,
	 *  or 0 to leave it the same.
	 */
	private void output(String toPrint, int direction) {
		if (direction < 0) indentationLevel--;

		String output = "";

		for (int i = 0; i < indentationLevel; i++) {
			output = output + "    ";
		} // end for
		
		output = output + toPrint + "\n";

		outputQueue.add(output);
		if (direction > 0) indentationLevel++;
	} // end printIndented()

	// throws an exception
	private void error() throws InvalidInputException {
		String message = String.format("ERROR: Line %d: Invalid input: %s\n", lex.getLineNumber(), nextLexeme.getLexeme());
		throw new InvalidInputException(message);
	} // end error()
	
	@Override
	public ArrayDeque<String> getOutputQueue(){
		return outputQueue;
	}

	@Override
	public String getErrorMessage() {
		return String.format("ERROR: Line %d: Invalid input: %s\n", lex.getLineNumber(), nextLexeme.getLexeme());
	}

	// begin the recursive descent process
	@Override
	public void start() throws InvalidInputException {
		program(); // <program>
	} // end start()

	// <qualified_identifier> = <identifier> {"." <identifier>};
	private void qualifiedIdentifier() throws InvalidInputException {
		output("Enter <qualified_identifier>", 1);

		parseLexeme(Token.IDENTIFIER);

		while (nextLexeme.getToken() == Token.DOT) {
			parseLexeme(Token.DOT);
			parseLexeme(Token.IDENTIFIER);
		} // end while

		output("Exit <qualified_identifier>", -1);
	} // end qualifiedIdentifier()

	// <program> = ["package" <qualified_identifier>] ";" {<import>} <class>;
	private void program() throws InvalidInputException {
		output("Enter <program>", 1);

		if (nextLexeme.getToken() == Token.KEYWORD_PACKAGE) {
			parseLexeme(Token.KEYWORD_PACKAGE);
			qualifiedIdentifier(); // <qualified_identifier>
			parseLexeme(Token.SEMICOLON);
		} // end if

		while (nextLexeme.getToken() == Token.KEYWORD_IMPORT) {
			importRule(); // <import>
		}

		classRule(); // <class>

		output("Exit <program>", -1);
	} // end program()

	// <import> = "import" ["static"] <identifier> {"." <identifier>} [".*"] ";" ;
	private void importRule() throws InvalidInputException {
		output("Enter <import>", 1);

		parseLexeme(Token.KEYWORD_IMPORT);
		
		// must check lexeme itself as "static" is a modifier
		if (nextLexeme.getLexeme().equals("static")) {
			parseLexeme(Token.MODIFIER);
		}

		parseLexeme(Token.IDENTIFIER);

		while (nextLexeme.getToken() == Token.DOT) {
			parseLexeme(Token.DOT);
			if (nextLexeme.getLexeme().equals("*")) {
				// asterisk is an infix operator
				parseLexeme(Token.INFIX_OPERATOR);
				break;
			} else {
				parseLexeme(Token.IDENTIFIER);
			} // end if/else
		} // end while

		parseLexeme(Token.SEMICOLON);

		output("Exit <import>", -1);
	} // end importRule()

	// <class> = {<modifier>} <class declaration>;
	private void classRule() throws InvalidInputException {
		output("Enter <class>", 1);

		while (nextLexeme.getToken() == Token.MODIFIER) {
			parseLexeme(Token.MODIFIER);
		} // end while

		classDeclaration(); // <class_declaration>

		output("Exit <class>", -1);
	} // end classRule()

	// <class_declaration> = "class" <identifier> [<type_parameters>][<extends>]
	// [<implements>] <class_body>;
	private void classDeclaration() throws InvalidInputException {
		output("Enter <class_declaration>", 1);

		parseLexeme(Token.KEYWORD_CLASS);
		parseLexeme(Token.IDENTIFIER);

		if (nextLexeme.getToken() == Token.LEFT_ANGLEBRACKET)
			typeParameters(); // <type_parameters>
		if (nextLexeme.getToken() == Token.KEYWORD_EXTENDS)
			extendsRule(); // <extends>
		if (nextLexeme.getToken() == Token.KEYWORD_IMPLEMENTS)
			implementsRule(); // <implements>

		classBody(); // <class_body>

		output("Exit <class_declaration>", -1);
	} // end classDeclaration()

	// <extends> = "extends" <type>;
	private void extendsRule() throws InvalidInputException {
		output("Enter <extends>", 1);

		parseLexeme(Token.KEYWORD_EXTENDS);
		type(); // <type>

		output("Exit <extends>", -1);
	} // end extendsRule()

	// <implements> = "implements" <type> {',' <type>};
	private void implementsRule() throws InvalidInputException {
		output("Enter <implements>", 1);

		parseLexeme(Token.KEYWORD_IMPLEMENTS);
		type(); // <type>

		while (nextLexeme.getToken() == Token.COMMA) {
			parseLexeme(Token.COMMA);
			type(); // <type>
		} // end while

		output("Exit <implements>", -1);
	} // end implementsRule()

	// <class_body> = '{' {<class body statement>} '}';
	private void classBody() throws InvalidInputException {
		output("Enter <class_body>", 1);

		parseLexeme(Token.LEFT_BRACE);

		while (nextLexeme.getToken() != Token.RIGHT_BRACE) {
			classBodyStatement();
		}

		parseLexeme(Token.RIGHT_BRACE);

		output("Exit <class_body>", -1);
	} // end <class_body>

	// <class_body_statement> = ';'
	//   | ["static"] <block>;
	//   | {<modifier>} <class_body_declaration>
	private void classBodyStatement() throws InvalidInputException {
		output("Enter <class_body_statement>", 1);

		switch (nextLexeme.getToken()) {

		// semicolon: this is an empty statement
		case SEMICOLON:
			parseLexeme(Token.SEMICOLON);
			break;

		// left brace: this is the opening of a block
		case LEFT_BRACE:
			block(); // <block>
			break;

		// otherwise, assume this is a declaration
		default:
			while (nextLexeme.getToken() == Token.MODIFIER) {
				parseLexeme(Token.MODIFIER);
			} // end while

			if (nextLexeme.getToken() == Token.LEFT_BRACE) {
				block(); // <block>
			} else {
				classBodyDeclaration(); // <class_body_declaration>
			} // end if/else

		} // end switch

		output("Exit <class_body_statement>", -1);
	} // end classBodyStatement()

	// <class_body_declaration> = <class_declaration> 
	//    | "void" <identifier> <method_declaration> (*void method declaration*)
	//    | <identifier> <method_declaration> (*constructor declaration*)
	//    | <identifier> <type_half> <identifier> <method_declaration> (*standard method declaration*)
	//    | <identifier> <type_half> <identifier> <field_declaration> ";"; (*field declaration*)
	private void classBodyDeclaration() throws InvalidInputException {
		output("Enter <class_body_declaration>", 1);

		switch (nextLexeme.getToken()) {

		// <class_declaration> 
		case KEYWORD_CLASS:
			classDeclaration(); // <class_declaration>
			break;

		// "void" <identifier> <method_declaration> (*void method declaration*)
		case KEYWORD_VOID:
			parseLexeme(Token.KEYWORD_VOID);
			parseLexeme(Token.IDENTIFIER);
			methodDeclaration(); // <method_declaration>
			break;

		// identifiers and primitive types are handled together
		// as they could both by types
		case IDENTIFIER:
		case PRIMITIVE_TYPE:
			parseLexeme(nextLexeme.getToken());

			if (nextLexeme.getToken() == Token.LEFT_PAREN) {
				// if identifier is followed by a left paren, it
				// must be a constructor declaration
				methodDeclaration(); // <method_declaration>
				break;
			} // end if
			
			// otherwise, we know this is a type
			
			typeHalf(); // <type_half>

			parseLexeme(Token.IDENTIFIER);

			if (nextLexeme.getToken() == Token.LEFT_PAREN) {
				// if identifier followed by left paren,
				// this is a method declaration
				methodDeclaration(); // <method_declaration>
			} else {
				// if it isn't a left paren, this is a field declaration
				fieldDeclaration(); // <field_declaration>
				parseLexeme(Token.SEMICOLON);
			} // end if/else

			break;

		default:
			error();

		} // end switch

		output("Exit <class_body_declaration>", -1);
	} // end classBodyDeclaration()

	// <field_declaration> = {"[]"} ["=" <variable_init>] <variable_declarators_half>;
	private void fieldDeclaration() throws InvalidInputException {
		output("Enter <field_declaration>", 1);

		while (nextLexeme.getToken() == Token.LEFT_BRACKET) {
			parseLexeme(Token.LEFT_BRACKET);
			parseLexeme(Token.RIGHT_BRACKET);
		} // end while

		if (nextLexeme.getToken() == Token.ASSIGNMENT_OPERATOR) {
			parseLexeme(Token.ASSIGNMENT_OPERATOR);
			variableInit(); // <variable_init>
		} // end if

		variableDeclaratorsHalf(); // <variable_declarators_half>

		output("Exit <field_declaration>", -1);
	} // end fieldDeclaration()

	// <variable_declarators> = <variable_declarator> <variable_declarators_half>;
	private void variableDeclarators() throws InvalidInputException {
		output("Enter <variable_declarators>", 1);

		variableDeclarator(); // <variable_declarator>

		variableDeclaratorsHalf(); // <variable_declarators_half>

		output("Exit <variable_declarators>", -1);
	} // end variableDeclarators()

	// <variable_declarator> = <identifier> {'[]'} ["=" <variable_init>];
	private void variableDeclarator() throws InvalidInputException {
		output("Enter <variable_declarator>", 1);

		parseLexeme(Token.IDENTIFIER);

		while (nextLexeme.getToken() == Token.LEFT_BRACKET) {
			parseLexeme(Token.LEFT_BRACKET);
			parseLexeme(Token.RIGHT_BRACKET);
		} // end while

		if (nextLexeme.getToken() == Token.ASSIGNMENT_OPERATOR) {
			parseLexeme(Token.ASSIGNMENT_OPERATOR);
			variableInit(); // <variable_init>
		} // end if

		output("Exit <variable_declarators>", -1);
	} // end variableDeclarator()

	// <variable_declarators_half> = {"," <variable_declarator>};
	private void variableDeclaratorsHalf() throws InvalidInputException {
		output("Enter <variable_declarators_half>", 1);

		while (nextLexeme.getToken() == Token.COMMA) {
			parseLexeme(Token.COMMA);
			variableDeclarator(); // <variable_declarator>
		} // end while

		output("Exit <variable_declarators_half>", -1);
	} // end variableDeclaratorsHalf()

	// <variable_declarators_afterID> = {'[]'} ["=" <variable_init>] <variable_declarators_half>;
	private void variableDeclaratorsAfterID() throws InvalidInputException {
		output("Enter <variable_declarators_afterID>", 1);

		while (nextLexeme.getToken() == Token.LEFT_BRACKET) {
			parseLexeme(Token.LEFT_BRACKET);
			parseLexeme(Token.RIGHT_BRACKET);
		} // end while

		if (nextLexeme.getToken() == Token.ASSIGNMENT_OPERATOR) {
			parseLexeme(Token.ASSIGNMENT_OPERATOR);
			variableInit(); // <variable_init>
		} // end if	

		variableDeclaratorsHalf(); // <variable_declarators_half>

		output("Exit <variable_declarators_afterID", -1);
	} // end variableDeclaratorsAfterID();

	// <method_declaration> = <parameters>
	// ["throws" <qualified_identifier> {"," <qualified_identifier>}]
	private void methodDeclaration() throws InvalidInputException {
		output("Enter <method_declaration>", 1);

		parameters(); // <parameters>

		if (nextLexeme.getToken() == Token.KEYWORD_THROWS) {
			parseLexeme(Token.KEYWORD_THROWS);
			qualifiedIdentifier(); // <qualified_identifier>

			while (nextLexeme.getToken() == Token.COMMA) {
				parseLexeme(Token.COMMA);
				qualifiedIdentifier(); // <qualified_identifier>
			} // end while

		} // end if

		if (nextLexeme.getToken() == Token.SEMICOLON) {
			parseLexeme(Token.SEMICOLON); // empty statement
		} else  {
			block(); // <block>
		} // end if/else

		output("Exit <method_declaration>", -1);
	} // end methodDeclaration()

	// <parameters> = "(" [<parameter> {, <parameter>}] ")";
	private void parameters() throws InvalidInputException {
		output("Enter <parameters>", 1);

		parseLexeme(Token.LEFT_PAREN);

		if (nextLexeme.getToken() != Token.RIGHT_PAREN) {

			parameter(); // <parameter>
			while (nextLexeme.getToken() == Token.COMMA) {
				parseLexeme(Token.COMMA);
				parameter(); // <parameter>
			} // end while

		} // end if

		parseLexeme(Token.RIGHT_PAREN);

		output("Exit <parameters>", -1);
	} // end parameters()

	// <parameter> = {<modifier>} <type> <identifier> {"[]"};
	private void parameter() throws InvalidInputException {
		output("Enter <parameter>", 1);

		while (nextLexeme.getToken() == Token.MODIFIER) {
			parseLexeme(Token.MODIFIER);
		} // end while

		type(); // <type>

		parseLexeme(Token.IDENTIFIER);

		while (nextLexeme.getToken() == Token.LEFT_BRACKET) {
			parseLexeme(Token.LEFT_BRACKET);
			parseLexeme(Token.RIGHT_BRACKET);
		} // end while

		output("Exit <parameter>", -1);
	} // end parameter()

	// <block> = '{' {<block_statement> }"}";
	private void block() throws InvalidInputException {
		output("Enter <block>", 1);

		parseLexeme(Token.LEFT_BRACE);

		while (nextLexeme.getToken() != Token.RIGHT_BRACE) {
			blockStatement(); // <block_statement>
		} // end while

		parseLexeme(Token.RIGHT_BRACE);

		output("Exit <block>", -1);
	} // end block()

	// <block_statement> = {<modifier>} (
	//		<class_declaration>
	//		| <local_variable_declaration>
	//		| <identifier> ":" <statement>
	//		| <identifier> [<type_arguments>] {"." <identifier> [<type_arguments>]} {"[]"} <variable_declarators>
	//	    | <identifier> {"." <identifier>} <expression_afterID>
	//	    | <identifier> {"." <identifier>} {"[]"} "[" <selector_half>;
	//	);
	private void blockStatement() throws InvalidInputException {
		output("Enter <block_statement>", 1);

		// if the first lexeme is "synchronized," this is a synchronized block
		// which is handled in statement();
		if (nextLexeme.getLexeme().equals("synchronized")) {
			statement(); // <statement>

			// exit the method
			output("Exit <block_statement>", -1);

			return;
		} // end if

		// cycle through all modifiers
		while (nextLexeme.getToken() == Token.MODIFIER) {
			parseLexeme(Token.MODIFIER);
		} // end while

		switch (nextLexeme.getToken()) {
		case KEYWORD_CLASS:
			classDeclaration(); // <class_declaration>
			break;

		case PRIMITIVE_TYPE:
			localVariableDeclaration(); // <local_variable_declaration>
			parseLexeme(Token.SEMICOLON);
			break;

		// identifier could either be a type or the start of an expression
		case IDENTIFIER:
			boolean typeArguments = false; // boolean to detect syntax errors

			parseLexeme(Token.IDENTIFIER);

			// if the first token following the identifier is an
			// assignment operator, this is an expression
			if (nextLexeme.getToken() == Token.ASSIGNMENT_OPERATOR
					|| nextLexeme.getToken() == Token.OPERATOR_INCREMENT
					|| nextLexeme.getToken() == Token.OPERATOR_DECREMENT) {
				expressionAfterID(); // <expression_from_block>
				break;
			} // end if

			// if the next token is a colon, this is a statement following a label
			if (nextLexeme.getToken() == Token.COLON) {
				
				parseLexeme(Token.COLON);
				statement(); // <statement>
				break;
			}
				
			if (nextLexeme.getToken() == Token.LEFT_ANGLEBRACKET) {
				typeArguments(); // <type_arguments>
				typeArguments = true;
			} // end if
			
			while (nextLexeme.getToken() == Token.DOT) {
				
				parseLexeme(Token.DOT);
				
				if (nextLexeme.getToken() != Token.IDENTIFIER) {
					//EXPRESSION: IDENTIFIER SUFFIX STARTING WITH DOT
					if (typeArguments)
						error(); // if any type arguments have occurred before this, error
					expressionAfterID(); // <expression_from_block>
					break;
				} // end if
				
				parseLexeme(Token.IDENTIFIER);
				
				if (nextLexeme.getToken() == Token.LEFT_ANGLEBRACKET) {
					typeArguments(); // <type_arguments>
					typeArguments = true;
				} // end if
			
			} // end while

			if (nextLexeme.getToken() == Token.LEFT_PAREN) {
				// EXPRESSION: IDENTIFIER SUFFIX STARTING WITH LEFT PAREN
				if (typeArguments) error();
				expressionAfterID(); // <expression_from_block
				break;
			} // end if
			
			while (nextLexeme.getToken() == Token.LEFT_BRACKET) {
				parseLexeme(Token.LEFT_BRACKET);
				
				if (nextLexeme.getToken() != Token.RIGHT_BRACKET) {
					if (typeArguments) error();
					selectorHalf();
					break;
				} // end if
				
				parseLexeme(Token.RIGHT_BRACKET);
			} // end while
			
			variableDeclaratorsAfterID();
			break;

		default:
			statement(); // <statement>
			break;

		} // end switch

		output("Exit <block_statement>", -1);
	} // end blockStatement()

	// <local_variable_declaration> = <type> <variable_declarators>;
	private void localVariableDeclaration() throws InvalidInputException {
		output("Enter <local_variable_declaration>", 1);

		type(); // <type>
		variableDeclarators(); // <variable_declarators>

		output("Exit <local_variable_declaration>", -1);
	} // end <local_variable_declaration>

	// <type> = <primitive_type> {"[]"}
	//   | <identifier> <type_half>;
	private void type() throws InvalidInputException {
		output("Enter <type>", 1);

		if (nextLexeme.getToken() == Token.PRIMITIVE_TYPE) {
			parseLexeme(Token.PRIMITIVE_TYPE);
			
			while (nextLexeme.getToken() == Token.LEFT_BRACKET) {
				parseLexeme(Token.LEFT_BRACKET);
				parseLexeme(Token.RIGHT_BRACKET);
			} // end while
			
		} else {
			parseLexeme(Token.IDENTIFIER);
			typeHalf(); // <type_half>
		} // end else

		output("Exit <type>", -1);
	} // end type()

	// <type_half> = [<type_arguments>] {"." <identifier> [type_arguments]}  {"[]"};
	private void typeHalf() throws InvalidInputException {
		output("Enter <type_half>", 1);

		if (nextLexeme.getToken() == Token.LEFT_ANGLEBRACKET)
			typeArguments(); // <type_arguments>

		while (nextLexeme.getToken() == Token.DOT) {
			parseLexeme(Token.DOT);
			parseLexeme(Token.IDENTIFIER);
			if (nextLexeme.getToken() == Token.LEFT_ANGLEBRACKET)
				typeArguments(); // <type_arguments>
		} // end while

		while (nextLexeme.getToken() == Token.LEFT_BRACKET) {
			parseLexeme(Token.LEFT_BRACKET);
			parseLexeme(Token.RIGHT_BRACKET);
		} // end while

		output("Exit <type_half>", -1);
	} // end typeHalf()

	// <type_arguments> = "<" <type_argument> {"," <type_argument>} ">" | "<>;
	private void typeArguments() throws InvalidInputException {
		output("Enter <type_arguments>", 1);

		parseLexeme(Token.LEFT_ANGLEBRACKET);
		
		if (nextLexeme.getToken() == Token.RIGHT_ANGLEBRACKET) {
			parseLexeme(Token.RIGHT_ANGLEBRACKET);
			output("Exit <type_arguments>", -1);
			return;
		} // end if

		typeArgument(); // <type_argument>

		while (nextLexeme.getToken() == Token.COMMA) {
			parseLexeme(Token.COMMA);
			typeArgument(); // <type_argument>
		} // end while

		parseLexeme(Token.RIGHT_ANGLEBRACKET);

		output("Exit <type_arguments>", -1);
	} // end typeArguments()

	// <type_argument> = <type> | "?" [ ("super" | "extends") <type>];
	private void typeArgument() throws InvalidInputException {
		output("Enter <type_argument>", 1);

		if (nextLexeme.getToken() == Token.QUESTION_MARK) {
			parseLexeme(Token.QUESTION_MARK);
			
			if (nextLexeme.getToken() == Token.KEYWORD_SUPER || nextLexeme.getToken() == Token.KEYWORD_EXTENDS) {
				parseLexeme(nextLexeme.getToken());
				type(); // <type>
			} // end if
			
		} else {
			type(); // <type>
		} // end else

		output("Exit <type_argument>", -1);
	} // end typeArgument()
	
	// <type_parameters> = "<" <type_parameter> {"," <type_parameter>} ">";
	private void typeParameters() throws InvalidInputException {
		output("Enter <type_parameters>", 1);
		
		parseLexeme(Token.LEFT_ANGLEBRACKET);
		
		typeParameter(); // <type_parameter>
		
		while (nextLexeme.getToken() == Token.COMMA) {
			parseLexeme(Token.COMMA);
			typeParameter(); // <type_parameter>
		} // end while
		
		parseLexeme(Token.RIGHT_ANGLEBRACKET);
		
		output("Exit <type_parameters>", -1);
	} // end typeParameters()
	
	// <type_parameter> = <identifier> ["extends" <type> {"&" <type>}];
	private void typeParameter() throws InvalidInputException {
		output("Enter <type_parameter>", 1);
		
		parseLexeme(Token.IDENTIFIER);
		if (nextLexeme.getToken() == Token.KEYWORD_EXTENDS) {
			
			parseLexeme(Token.KEYWORD_EXTENDS);
			type(); // <type>
			
			while (nextLexeme.getLexeme().equals("&")) {
				parseLexeme(Token.INFIX_OPERATOR); // "&" is an infix operator
				type(); // <type>
			} // end while
			
		} // end if
		
		output("Exit <type_parameter>", -1);
	} // end typeParameter()

	// <variable_init> = <expression> | <array_init>;
	private void variableInit() throws InvalidInputException {
		output("Enter <variable_init>", 1);

		if (nextLexeme.getToken() == Token.LEFT_BRACE) {
			arrayInit(); // <array_init>
		} else {
			expression(); // <expression>
		}

		output("Exit <variable_init>", -1);
	} // end variableInit()

	// <array_init> = "{" [<variable_init> {"," <variable_init>}] "}";
	private void arrayInit() throws InvalidInputException {
		output("Enter <array_init>", 1);

		parseLexeme(Token.LEFT_BRACE);

		if (nextLexeme.getToken() != Token.RIGHT_BRACE) {
			variableInit(); // <variable_init>
			while(nextLexeme.getToken() != Token.RIGHT_BRACE) {
				parseLexeme(Token.COMMA);
				variableInit(); // <variable_init>
			} // end while
		} // end if

		parseLexeme(Token.RIGHT_BRACE);

		output("Exit <array_init>", -1);
	} // end array_init

	// <statement> = "if" <paren_expression> ["else" <statement>]
	//    | "while" <paren_expression> <statement>
	//    | "do" <statement> "while" <paren_expression> ";"
	//    | "for" "(" [{<modifier>} <type> <identifier> {"[]"}] ["=" <variable_init>] <for_arguments> ")" <statement>
	//    | "assert" <expression> [:<expression>] ";"
	//    | "switch" <paren_expression> "{" <cases> "}"
	//    | "return" [<expression>] ";"
	//    | "break" [<identifier>] ";"
	//    | "continue" [<identifier>] ";"
	//    | "throw" <expression> ";"
	//    | "try" <block> [<catches>] ["finally" <block>]
	//    | "synchronized" <paren_expression> <block>
	//    | <block>
	//    | ";"
	//    | <identifier> ":" <statement>
	//    | <identifier> <expression_half> ";"
	//    | <expression> ";" ;
	private void statement() throws InvalidInputException {
		output("Enter <statement>", 1);

		switch (nextLexeme.getToken()) {

		// "if" <paren_expression> ["else" <statement>]
		case KEYWORD_IF:
			parseLexeme(Token.KEYWORD_IF);
			parenExpression(); // <paren_expression>
			statement(); // <statement>
			if (nextLexeme.getToken() == Token.KEYWORD_ELSE) {
				parseLexeme(Token.KEYWORD_ELSE);
				statement(); // <statement>
			} // end if
			break;

		// "while" <paren_expression> <statement>
		case KEYWORD_WHILE:
			parseLexeme(Token.KEYWORD_WHILE);
			parenExpression(); // <paren_expression>
			statement(); // <statement>
			break;

		// "do" <statement> "while" <paren_expression> ";"
		case KEYWORD_DO:
			parseLexeme(Token.KEYWORD_DO);
			statement(); // <statement>
			parseLexeme(Token.KEYWORD_WHILE);
			parenExpression(); // <paren_expression>
			parseLexeme(Token.SEMICOLON);
			break;

		//"for" "(" [{<modifier>} <type> <identifier> {"[]"}]
		// ["=" <variable_init>] <for_arguments> ")" <statement>
		case KEYWORD_FOR:
			parseLexeme(Token.KEYWORD_FOR);
			parseLexeme(Token.LEFT_PAREN);
			
			if (nextLexeme.getToken() != Token.COLON && nextLexeme.getToken() != Token.SEMICOLON) {
				
				while (nextLexeme.getToken() == Token.MODIFIER)
					parseLexeme(Token.MODIFIER);
				
				type(); // <type>
				parseLexeme(Token.IDENTIFIER);
				
				while (nextLexeme.getToken() == Token.LEFT_BRACKET) {
					parseLexeme(Token.LEFT_BRACKET);
					parseLexeme(Token.RIGHT_BRACKET);
				} // end while
